# PDF-Summarizer-Chatbot

./: .env  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
