[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.8.0.post1",
    "huggingface-hub>=0.23.0",
    "langchain==0.2.0",
    "langchain-community==0.2.0",
    "langchain-core>=0.2.43",
    "langchain-huggingface==0.0.3",
    "langchain-openai==0.1.17",
    "langchain-text-splitters==0.2.2",
    "openai==1.37.0",
    "pillow==10.3.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "sentence-transformers==2.7.0",
    "torch>=2.0.0",
    "streamlit==1.36.0",
    "streamlit-extras==0.4.7",
]
